--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <div class="swiper-slide"><img src="img/o_seminarista.svg" alt="Livro: O o_seminarista"></div>
             </div>
 
-            <!-- If we need navigation buttons -->
+            <!-- If we need navigations buttons -->
             <div class="swiper-button-prev"></div>
             <div class="swiper-button-next"></div> 
         </div>
